--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body{
 .container{
     background-color: white;
     min-height: 100vh;
+    height: 100%;
+    max-width: 800px;
+    border-top: 20px solid yellow;
+    border-bottom: 20px solid yellow;
+    
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; 
 }
 
@@ -29,8 +34,8 @@ body{
 }
 
 #under-line{
-    height: 4px;
-    background-color: red;
+    height: 8px;
+    background-color: orange;
     position: absolute;
     min-width: 54px;
     bottom: 0px;
@@ -56,4 +61,45 @@ body{
 
 .task-tabs div{
     cursor: pointer
+}
+
+h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 45px;
+    text-align: center;
+    margin: 10px 0 0 0;
+    text-decoration: dotted;
+    letter-spacing: 2px;
+}
+
+.caption{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+}
+
+#task-input{
+    text-align: start;
+    width: 400px;
+    border: 2px dashed orange;
+    border-radius: 100px;
+}
+
+.input-area{
+    text-align: center;
+    margin: 1.5em;
+}
+
+.task-tabs{
+    position: relative;
+    display: flex;
+    border-bottom: 3px dashed orange;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+
+footer{
+    text-align: center;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
